shame/tests/buffer_constraints_fail/write_requires_ref.rs
fn main() { let _: shame::Buffer<shame::f32x1, shame::mem::Storage, shame::ReadWrite> = todo!(); }
